src/resources/css/extjs_rtl.css
/* buttons */
.x-btn { direction: ltr; }
.x-btn-text {direction: rtl; }

.x-btn-mc em.x-btn-arrow { background-position:left center; padding-right:0; padding-left:10px; }
.x-btn-mc em.x-btn-split { background-position:left center; display:block; padding-right:0; padding-left:14px; }
.x-btn-mc em.x-btn-split { background-image:url(../images/default/button/s-arrow.gif); }
.x-btn-over .x-btn-mc em.x-btn-split, .x-btn-click .x-btn-mc em.x-btn-split, .x-btn-menu-active .x-btn-mc em.x-btn-split, .x-btn-pressed .x-btn-mc em.x-btn-split {
    background-image:url(../images/default/button/s-arrow-o.gif);
}

/* menus */
.x-menu { background-image:url(../images/default/menu/menu.gif); background-position: top right; background-repeat:repeat-y; }
.x-menu-item-arrow{ background-image:url(../images/default/menu/menu-parent.gif); background-position:left center;}
a.x-menu-item { padding:3px 27px 3px 21px; }
.x-menu-item-icon { left:auto; right:3px; }
.x-menu .x-color-palette, .x-menu .x-date-picker { margin-right:26px; margin-left:4px; }
.x-menu-list-item-indent { padding-left:auto; padding-right:27px; }

/*Panel's x-tool*/
.x-tool {float:left;}

/*Layouts*/
.x-column { float:right;}
.x-panel-inline-icon { margin-left:4px; margin-right:0; }
.x-tool-expand-east, .x-tool-expand-west { float:none }

/*Tabs*/
ul.x-tab-strip li{direction:ltr; float:right;margin-right:2px; margin-left:0; width:120px;}
ul.x-tab-strip > li{width:auto;}
.x-tab-strip-text {direction: rtl;}

/*Grids*/
.x-props-grid .x-grid3-td-name .x-grid3-cell-inner {
    background-image:url(../images/default/grid/grid3-special-col-bg.gif) !important;
    padding-left: 0; padding-right: 12px; background-position: 100% 0% !important;
}

/*Forms*/
.x-form-item label { float:right; }
.x-form-label-left label { text-align: right }
.ext-safari .x-form-field-wrap .x-form-trigger,.ext-gecko .x-form-field-wrap .x-form-trigger{
    right:auto; left:0;
}
.x-form-field-wrap .x-form-trigger {background-image:url(../images/default/form/trigger-rtl.gif)}
.x-form-field-wrap .x-form-date-trigger { background-image: url(../images/default/form/date-trigger-rtl.gif); }
.x-form-field-wrap .x-form-clear-trigger { background-image: url(../images/default/form/clear-trigger-rtl.gif); }
.x-form-field-wrap .x-form-search-trigger { background-image: url(../images/default/form/search-trigger-rtl.gif); }

/*Date picker*/
.x-date-right a { background-image: url(../images/default/shared/left-btn.gif); }
.x-date-left a{ background-image: url(../images/default/shared/right-btn.gif); }
.x-date-middle .x-btn-mc em.x-btn-arrow { background-position: 0 0; }
x-btn-mc em.x-btn-arrow { padding-left: 12px }

/*Toolbar icons*/
.x-tbar-page-first{ background-image: url(../images/default/grid/page-first-rtl.gif) !important; }
.x-tbar-page-last{ background-image: url(../images/default/grid/page-last-rtl.gif) !important; }
.x-tbar-page-next{ background-image: url(../images/default/grid/page-next-rtl.gif) !important; }
.x-tbar-page-prev{ background-image: url(../images/default/grid/page-prev-rtl.gif) !important; }
.x-item-disabled .x-tbar-page-first{ background-image: url(../images/default/grid/page-first-disabled-rtl.gif) !important; }
.x-item-disabled .x-tbar-page-last{ background-image: url(../images/default/grid/page-last-disabled-rtl.gif) !important; }
.x-item-disabled .x-tbar-page-next{ background-image: url(../images/default/grid/page-next-disabled-rtl.gif) !important; }
.x-item-disabled .x-tbar-page-prev{ background-image: url(../images/default/grid/page-prev-disabled-rtl.gif) !important; }

/*Toobar elements*/
.x-toolbar .x-btn-over .x-btn-mc em.x-btn-split { background-image:url(../images/default/button/s-arrow-o.gif); }
.x-toolbar .x-btn-mc em.x-btn-split { background-image:url(../images/default/button/s-arrow-noline.gif); }

